	Fixed #IP-1209: Cosmetics - Data usage bar glitches on 4k screens
	Fixed #IP-1217: Defect - Faulty cron for removing old backend logs
	Fixed #IP-1223: Bug - Admin log shows server IP instead of user IP
	Fixed #IP-1226: Panel maintenance mode: text message error
	Fixed #IP-1227: Page reseller statistics shows the same max/curr traffic/disk for all resellers
	Fixed #IP-1229: Courier - CRAM-MD5 authentication not enabled by default
	Fixed #IP-1230: RFC 7208 states that DNS SPF shoudln't be used anymore
	Fixed #IP-1233: Autoresponder script ( imscp-arpl-msgr ) cannot write in /var/log/imscp/imscp-arpl-msgr
	Fixed #IP-1234: IPv6 addresses causes exception
	Fixed #IP-1235: Cosmetics - Reseller overview - Exception in domain status breaks the layout
	Fixed #IP-1238: Question mark information box not functioning when switching page

------------------------------------------------------------------------------------------------------------------------
1.2.0
------------------------------------------------------------------------------------------------------------------------

2014-12-30: Laurent Declercq
	RELEASE i-MSCP 1.2.0

BACKEND
	Added: FETCH_MODE option in iMSCP::Database::mysql
	Added: iMSCP::ProgramFinder module which allow to test whether programs are available on the executable search path
	Added: iMSCP::Service module for service management ( start, stop, restart, reload, status )
	Added: Methods which allow to enable/disable apache conffiles from the conf-available directory ( Apache 2.4.x )
	Added: pigz ( Parallel Implementation of GZip ) algorithm for backups compression
	Added: Standard directory which allow to load apache conffiles prior any other vhost file ( Apache )
	Added: --verbose command line options for all scripts
	Changed: i-MSCP is now run through a dedicated httpd instance by using the nginx Web server
	Changed: Logfiles are now written as soon as possible ( allows to mitigate memory consumption )