@@ -62,6 +62,8 @@ CACHE_DATA_DIR = /var/cache/imscp
 VARIABLE_DATA_DIR = /var/local/imscp
 USER_WEB_DIR = /var/www/virtual
 
+DISTRO_CA_BUNDLE = /etc/ssl/certs/ca-certificates.crt
+
 ## PHP data
 
 PHP_TIMEZONE =
