@@ -334,7 +334,7 @@ allow_call_time_pass_reference = Off
 ; or per-virtualhost web server configuration file. This directive is
 ; *NOT* affected by whether Safe Mode is turned On or Off.
 ; http://php.net/open-basedir
-open_basedir = "{HOME_DIR}/:{CONF_DIR}/:/proc/:/bin/df:/bin/mount:{RKHUNTER_LOG}:{CHKROOTKIT_LOG}:{PEAR_DIR}/:{OTHER_ROOTKIT_LOG}"
+open_basedir = "{HOME_DIR}/:{CONF_DIR}/:/proc/:/bin/df:/bin/mount:{RKHUNTER_LOG}:{CHKROOTKIT_LOG}:{PEAR_DIR}/:{OTHER_ROOTKIT_LOG}:{DISTRO_CA_BUNDLE}"
 
 ; This directive allows you to disable certain functions for security reasons.
 ; It receives a comma-delimited list of function names. This directive is
