@@ -62,12 +62,15 @@ TICKETS
 	Fixed #IP-1223: Bug - Admin log shows server IP instead of user IP
 	Fixed #IP-1226: Panel maintenance mode: text message error
 	Fixed #IP-1227: Page reseller statistics shows the same max/curr traffic/disk for all resellers
+	Fixed #IP-1228: Adding SSL-certificate causes undefined index warning
 	Fixed #IP-1229: Courier - CRAM-MD5 authentication not enabled by default
 	Fixed #IP-1230: RFC 7208 states that DNS SPF shoudln't be used anymore
 	Fixed #IP-1233: Autoresponder script ( imscp-arpl-msgr ) cannot write in /var/log/imscp/imscp-arpl-msgr
 	Fixed #IP-1234: IPv6 addresses causes exception
 	Fixed #IP-1235: Cosmetics - Reseller overview - Exception in domain status breaks the layout
 	Fixed #IP-1238: Question mark information box not functioning when switching page
+	Fixed #IP-1239: SSL Certificate - Usage of CA certificates as provided by OS for validation
+	Fixed #IP-1241: Allow customers to generate self-signed SSL certificate for their domains through the frontEnd
 
 ------------------------------------------------------------------------------------------------------------------------
 1.2.0
